corrijo estilos css de preguntas de seguridad

--- a/Preguntas.S.html
+++ b/Preguntas.S.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preguntas de seguridad</title>
     <link rel="stylesheet" href="/src/public/css/style.css">
 </head>
+
 <body>
-    <header>
+    <nav>
         <h2>Nombre de usuario</h2>
-    </header>
-    <div class="container">
-        <div class="header">
-            <button><i class="fas fa-arrow-left"></i></button>
+    </nav>
+
+    <header>
+        <div class="title">
             <h1>Preguntas de seguridad</h1>
-            <button><i class="fas fa-cog"></i></button>
+            <p>Tus preguntas de seguridad ayudan a mantener tu cuenta segura. Puede usarlos para restablecer su contraseña
+            </p>
         </div>
-
-        <p>Tus preguntas de seguridad ayudan a mantener tu cuenta segura. Puede usarlos para restablecer su contraseña</p>
-
-        <div class="blue-box">
+            
+        <form class="blue-box">
             <h3>¿Cuál fue tu primer proyecto o tarea en esta empresa?</h3>
             <div class="form-group">
                 <label for="first-project">Respuesta</label>
@@ -35,8 +36,9 @@
                 <button type="" class="button1">Agregar otra pregunta</button>
                 <button type="" class="button2">Guardar cambios</button>
             </div>
-        </div>
-       
-    </div>
+        </form>
+
+    </header>
 </body>
+
 </html>
